# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import stockRouter from "./stock";
+import enquiriesRouter from "./enquiries";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(stockRouter);
+router.use(enquiriesRouter);
 
 export default router;
